--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -25,6 +25,9 @@
             <td>
                 <a th:href="@{'/product/delete/' + ${product.productName}}" class="btn btn-primary btn-sm mb-3">Delete</a>
             </td>
+            <td>
+                <a th:href="@{'/product/edit/' + ${product.productName}}" class="btn btn-primary btn-sm mb-3">Edit</a>
+            </td>
         </tr>
         </tbody>
     </table>
